--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
           <button class="btn btn-outline-success" type="submit">Search</button>
         </form>
+        <p>SONA</p>
       </div>
     </div>
   </nav>
