--- a/experience.html
+++ b/experience.html
@@ -44,7 +44,7 @@
             </div>
 
           <img
-            src="images\tetris_cover.jpg"
+            src="images/tetris_cover.jpg"
             width="100"
             height="100"
             class="ms-4 me-5 mb-3 mt-3 rounded-2 float-xxl-end"
@@ -65,7 +65,7 @@
       >
         <div>
           <img 
-            src="images\wheelchair.jpg"
+            src="images/wheelchair.jpg"
             width="100"
             height="100"
             class="ms-5 mb-3 mt-3 rounded-2"
@@ -84,7 +84,7 @@
       >
         <div>
           <img
-            src="images\logic.jpg"
+            src="images/logic.jpg"
             width="100"
             height="100"
             class="ms-4 mb-3 mt-3 me-5 rounded-2 float-end"
