--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
         class="d-flex fw-lighter text-xl-center ms-5 mb-5 mt-3 "
       >
       <img
-        src="/images/1.png"
+        src="images/1.png"
         width="200"
         height="200"
         style="object-fit: cover"
