--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       >
       <div>
       <img
-        src="/images/1.png"
+        src="images/1.png"
         width="200"
         height="200"
         style="object-fit: cover"
@@ -73,7 +73,7 @@
             <h3> My skills</h3> </div>
 
           <img
-            src="/images/2.jpg"
+            src="images/2.jpg"
             width="100"
             height="100"
             class="ms-4 mb-3 mt-3 rounded-2 justify-content-end"
@@ -93,7 +93,7 @@
       >
         <div>
           <img
-            src="/images/3.jpg"
+            src="images/3.jpg"
             width="100"
             height="100"
             class="ms-4 mb-3 mt-3 rounded-2"
@@ -113,7 +113,7 @@
       >
         <div>
           <img
-            src="/images/4.jpg"
+            src="images/4.jpg"
             width="100"
             height="100"
             class="ms-4 mb-3 mt-3 rounded-2"
